ontol/ontol-compiler/test-cases/error/map/array_map_without_braces.on
def foo (rel .'a': {text})
def bar (rel .'b': {text})

map(
    foo(
        'a': x // ERROR {`ontol.text`} variable must be enclosed in {}
    ),
    bar(
        'b': x // ERROR {`ontol.text`} variable must be enclosed in {}
    ),
)
